# maplesat

./: .gitignore  LICENSE  Makefile  README
core/: Solver.cc  Solver.h  SolverTypes.h
hordesat/: .gitignore  makehordesat.sh
hordesat/hordesat-src/: Makefile  hordesat.cpp
hordesat/hordesat-src/sharing/: AllToAllSharingManager.cpp  AllToAllSharingManager.h  LogSharingManager.cpp  LogSharingManager.h  SharingManagerInterface.h
hordesat/hordesat-src/solvers/: Lingeling.cpp  Lingeling.h  MiniSat.cpp  MiniSat.h  PortfolioSolverInterface.h
hordesat/hordesat-src/utilities/: ClauseDatabase.cpp  ClauseDatabase.h  ClauseFilter.cpp  ClauseFilter.h  DebugUtils.h  LFQueue.cpp  LFQueue.h  Logger.cpp  Logger.h  ParameterProcessor.h  SatUtils.cpp  SatUtils.h  Threading.h  UnitTest.cpp
hordesat/minisat/minisat/core/: Dimacs.h  Solver.cc  Solver.h  SolverTypes.h
maplecomsps/: starexec_build
maplecomsps/MapleCOMSPS/core/: Main.cc  Solver.cc  Solver.h  Solver.or
maplecomsps/MapleCOMSPS/simp/: Main.cc  Main.or  SimpSolver.or
maplecomsps/MapleCOMSPS/utils/: Options.or  System.or
maplecryptominisat/src/: heap.h  propengine.cpp  propengine.h  searcher.cpp  searcher.h
mapleglucose/: .gitignore  Makefile
mapleglucose/core/: Solver.cc  Solver.h
mapleglucose/simp/: Makefile
maplesat/: 6.cnf  CMakeLists.txt  Makefile
maplesat/core/: Dimacs.h  Main.cc  Solver.cc  Solver.h  SolverTypes.h  addconflictclauses.inc  automorphisms.h  coprimelist.h  cosarray.h  decomps.h  depend.mk  lamcases.h  maplesat
maplesat/maplesat/: Makefile
maplesat/maplesat/core/: Dimacs.h  Main.cc  Solver.cc  Solver.h  SolverTypes.h  maplesat
maplesat/maplesat/mtl/: Alg.h  Alloc.h  Heap.h  Map.h  Queue.h  Sort.h  Vec.h
maplesat/maplesat/simp/: Main.cc  SimpSolver.cc  SimpSolver.h
maplesat/maplesat/utils/: Options.cc  Options.h  System.cc  System.h
maplesat/mtl/: template.mk
maplesat/simp/: Main.cc  SimpSolver.cc
maplesat/utils/: System.cc
simp/: Main.cc
utils/: System.cc
